@@ -61,3 +61,7 @@
  -- Feature: Drewpoint im HMS100TF (Boris)
  -- Feature: RSS-Feeds now new arranged
 
+- Martin 2007-12-21
+ -- Feature: HMS-CO supported (Peter A.)
+ -- Feature: Webcams or local pictures added
+ -- Feature: ks300 mit Drewpoint (Boris)
